--- a/requirements.txt
+++ b/requirements.txt
@@ -5,9 +5,11 @@ Click==7.0
 dominate==2.3.5
 Flask==1.0.2
 Flask-Bootstrap==3.3.7.1
+Flask-Login==0.4.1
 Flask-Migrate==2.3.1
 Flask-Script==2.0.6
 Flask-SQLAlchemy==2.3.2
+Flask-Uploads==0.2.1
 Flask-WTF==0.14.2
 idna==2.8
 itsdangerous==1.1.0
@@ -15,6 +17,7 @@ Jinja2==2.10
 Mako==1.0.7
 MarkupSafe==1.1.0
 psycopg2==2.7.7
+psycopg2-binary==2.7.7
 python-dateutil==2.8.0
 python-editor==1.0.4
 requests==2.21.0
